starting to work with api and mongoDb

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,14 @@
 {
-  "projects": {
-    "default": "tvarkymas-4237a"
+  "targets": {
+    "tvarkymas-4237a": {
+      "hosting": {
+        "prod": [
+          "tvarkymas-4237a"
+        ],
+        "swalmen": [
+          "swalmen"
+        ]
+      }
+    }
   }
 }
