--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios-hooks": "^2.2.0",
     "bootstrap": "^4.5.3",
     "firebase": "^7.23.0",
+    "formik": "^2.2.6",
     "phosphor-react": "^1.0.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.4.0",
