--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-transition-group": "^4.4.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "typescript": "^4.1.4"
+    "styled-components": "^5.2.1",
+    "typescript": "^4.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -50,5 +51,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/styled-components": "^5.1.7"
   }
 }
