--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,10 +5,10 @@
     },
     "extends": [
         "eslint:recommended",
-        "plugin:react/recommended"
-        // "plugin:@typescript-eslint/recommended"
+        "plugin:react/recommended",
+        "plugin:@typescript-eslint/recommended"
     ],
-    // "parser": "@typescript-eslint/parser",
+    "parser": "@typescript-eslint/parser",
     "parserOptions": {
         "ecmaFeatures": {
             "jsx": true
@@ -17,8 +17,8 @@
         "sourceType": "module"
     },
     "plugins": [
-        "react"
-        // "@typescript-eslint"
+        "react",
+        "@typescript-eslint"
     ],
     "rules": {
         "indent": [
